# liberrc

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  errc.h  errorfunc.cpp  errorvalue.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
liberrc/: liberrc.h
unittests/: CMakeLists.txt  errmath_tests.cpp  errv_tests.cpp
